WIP: Stuck in bug for a while. Creating README.md

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,6 @@ ul {
     padding: 5%;
 }
 
+.languages {
+    color: darkgreen;
+}
